<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:id="@+id/parent"
    app:cardElevation="10dp"
    app:cardCornerRadius="7dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book Name"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:layout_below="@+id/txtName"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceBook"
            android:textStyle="italic"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/txtAuthor"
            android:layout_marginTop="7dp"/>
        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@+id/txtPrice"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/txtCopies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copiesBook"
            android:layout_below="@+id/txtDescription"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:visibility="gone"/>
        
        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:id="@+id/image"
            android:layout_below="@id/txtCopies"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_round"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountTxt"
            android:layout_below="@+id/image"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:text="@string/amount"
            android:visibility="gone">

        </TextView>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountSpinner"
            android:layout_below="@+id/image"
            android:layout_alignLeft="@id/amountTxt"
            android:layout_marginLeft="65dp"
            android:visibility="gone">
        </Spinner>

        <TextView
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_alignParentRight="true"
            android:text="@string/delete"
            android:layout_marginRight="8dp"
            android:textColor="#ff0000"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/editBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_alignParentLeft="true"
            android:text="@string/edit"
            android:layout_marginLeft="8dp"
            android:visibility="gone">

        </TextView>

        <TextView
            android:id="@+id/deleteBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_alignParentRight="true"
            android:text="@string/delete"
            android:layout_marginRight="8dp"
            android:textColor="#ff0000"
            android:visibility="gone">

        </TextView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>