<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00BCD4"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonShowBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="#009688"
        android:onClick="showBooks"
        android:text="@string/allbooks"
        app:layout_constraintEnd_toEndOf="@+id/textViewWelcome"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <Button
        android:id="@+id/buttonShowCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#009688"
        android:onClick="viewCart"
        android:text="@string/viewCart"
        app:layout_constraintEnd_toEndOf="@+id/buttonShowBooks"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/buttonShowBooks"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowBooks" />

    <Button
        android:id="@+id/menuLogoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#009688"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/buttonShowCart"
        app:layout_constraintStart_toStartOf="@+id/buttonShowCart"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowCart" />
</androidx.constraintlayout.widget.ConstraintLayout>